# ExamenParcialVinculante3-MiguelGodoy

./: CMakeLists.txt  README.md  main.cpp
Actor/: Actor.cpp  Actor.h
Launcher/: Launcher.cpp  Launcher.h
Tarea/: Tarea.cpp  Tarea.h
crud/: crud.cpp  crud.h
